# DroneSystems

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  camera_processing.py  main.cpp  package.xml
docker/ros2_deploy/: Dockerfile
docker/ros2_dev/: Dockerfile
launch/: config.yaml  full_system.launch.py  ml_tasks_launch.py
old/: README.md  camera_processing.py
scripts/: build_docker_image.sh  build_workspace.sh  clean_workspace.sh  launch_node.sh  local_test.sh  monitor_nodes.sh
src/archived/control_node/: package.xml  setup.py
src/archived/control_node/control_node/: control_node.py
src/archived/control_node/cpp_version/: CMakeLists.txt
src/archived/control_node/cpp_version/include/control_node/: control_node.hpp
src/archived/control_node/cpp_version/src/: control_node.cpp
src/archived/motor_prototyping/: thrust_force_measure.ino
src/camera_node/: package.xml  setup.cfg  setup.py
src/camera_node/camera_node/: camera_node.py
src/control_node/: CMakeLists.txt  package.xml
src/control_node/include/control_node/: control_node.hpp
src/control_node/src/: control_node.cpp
src/executor_node/: package.xml  setup.py
src/executor_node/executor_node/: executor_node.py
src/grabber_node/: package.xml  setup.cfg  setup.py
src/grabber_node/grabber_node/: grabber_node.py
src/image_processing/: camera_driver.cpp  image_processing.launch  image_processing.py
src/motor_control/: motor_control.cpp  motor_control.launch
src/motor_prototyping/: README.md  load_cell_calibration.ino  servo_movements.py  thrust_force_measure.ino  thrust_stand_load_sensing.ino
src/object_detection_node/: package.xml  setup.cfg  setup.py
src/object_detection_node/object_detection_node/: object_detection_node.py
