<?xml version="1.0"?>
<package format="2">
  <name>drone_processing</name>
  <version>0.0.0</version>
  <description>The drone processing package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
